[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/game_screen.gd" type="Script" id=1]
[ext_resource path="res://ro_sprites/2_RHOM_BLUE_SOLID.png" type="Texture" id=2]
[ext_resource path="res://scripts/card.gd" type="Script" id=3]
[ext_resource path="res://ro_sprites/1_CIRC_RED_SOLID.png" type="Texture" id=4]
[ext_resource path="res://ro_sprites/1_CIRC_GREEN_SOLID.png" type="Texture" id=5]
[ext_resource path="res://ro_sprites/1_CIRC_BLUE_EMPTY.png" type="Texture" id=6]
[ext_resource path="res://ro_sprites/1_RHOM_BLUE_EMPTY.png" type="Texture" id=7]
[ext_resource path="res://ro_sprites/1_XXX_BLUE_SOLID.png" type="Texture" id=8]
[ext_resource path="res://ro_sprites/3_RHOM_GREEN_DOT.png" type="Texture" id=9]
[ext_resource path="res://ro_sprites/2_CIRC_RED_SOLID.png" type="Texture" id=10]
[ext_resource path="res://ro_sprites/1_XXX_GREEN_EMPTY.png" type="Texture" id=11]
[ext_resource path="res://ro_sprites/3_RHOM_GREEN_EMPTY.png" type="Texture" id=12]
[ext_resource path="res://ro_sprites/3_XXX_RED_EMPTY.png" type="Texture" id=13]
[ext_resource path="res://ro_sprites/1_XXX_RED_SOLID.png" type="Texture" id=14]
[ext_resource path="res://scripts/Scores.gd" type="Script" id=15]
[ext_resource path="res://fonts/CallingCards_Bold_sample.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://scripts/timer.gd" type="Script" id=17]

[sub_resource type="Animation" id=1]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=10]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=11]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="Animation" id=12]

resource_name = "fader"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.773438, 0.773438, 0.773438, 1 ) ]
}

[sub_resource type="DynamicFont" id=13]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 16 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Control" index="0"]

modulate = Color( 0.984375, 0.984375, 0.984375, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_right = -2.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Material", "Theme", "Visibility" ]

[node name="Game_Screen" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1019.0
margin_top = -65.0
margin_right = 1630.0
margin_bottom = 593.0
grow_horizontal = 0
rect_rotation = 90.0
rect_scale = Vector2( 1.15, 1.15 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Grow Direction", "Material", "Visibility" ]

[node name="card_1" type="TextureButton" parent="Game_Screen" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 590.0
margin_top = 38.0
margin_right = 698.0
margin_bottom = 180.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Textures", "Theme", "Visibility" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_1" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 1 )
blend_times = [  ]

[node name="card_2" type="TextureButton" parent="Game_Screen" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 584.0
margin_top = 488.0
margin_right = 692.0
margin_bottom = 630.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Textures", "Theme", "Visibility" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_2" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 2 )
blend_times = [  ]

[node name="card_3" type="TextureButton" parent="Game_Screen" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 588.0
margin_top = 337.0
margin_right = 696.0
margin_bottom = 479.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Textures", "Theme", "Visibility" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_3" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 3 )
blend_times = [  ]

[node name="card_4" type="TextureButton" parent="Game_Screen" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 585.0
margin_top = 189.0
margin_right = 693.0
margin_bottom = 331.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Textures", "Theme", "Visibility" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_4" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 4 )
blend_times = [  ]

[node name="card_5" type="TextureButton" parent="Game_Screen" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 394.0
margin_top = 490.0
margin_right = 502.0
margin_bottom = 632.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_5" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 5 )
blend_times = [  ]

[node name="card_6" type="TextureButton" parent="Game_Screen" index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 397.0
margin_top = 339.0
margin_right = 505.0
margin_bottom = 481.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_6" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 6 )
blend_times = [  ]

[node name="card_7" type="TextureButton" parent="Game_Screen" index="6"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 396.0
margin_top = 193.0
margin_right = 504.0
margin_bottom = 335.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_7" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 7 )
blend_times = [  ]

[node name="card_8" type="TextureButton" parent="Game_Screen" index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 493.0
margin_right = 325.0
margin_bottom = 635.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_8" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 8 )
blend_times = [  ]

[node name="card_9" type="TextureButton" parent="Game_Screen" index="8"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 214.0
margin_top = 342.0
margin_right = 322.0
margin_bottom = 484.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_9" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 9 )
blend_times = [  ]

[node name="card_10" type="TextureButton" parent="Game_Screen" index="9"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 187.0
margin_right = 325.0
margin_bottom = 329.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_10" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 10 )
blend_times = [  ]

[node name="card_11" type="TextureButton" parent="Game_Screen" index="10"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 218.0
margin_top = 34.0
margin_right = 326.0
margin_bottom = 176.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Focus", "Rect", "Textures", "Theme" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_11" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 11 )
blend_times = [  ]

[node name="card_12" type="TextureButton" parent="Game_Screen" index="11"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 399.0
margin_top = 37.0
margin_right = 507.0
margin_bottom = 179.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
expand = true
script = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="fade" type="AnimationPlayer" parent="Game_Screen/card_12" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fader = SubResource( 12 )
blend_times = [  ]

[node name="Scores" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 575.0
margin_right = 237.0
margin_bottom = 866.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 15 )
_sections_unfolded = [ "Rect" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 60.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="Timer" index="0"]

modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 21.0
margin_top = 156.0
margin_right = 103.0
margin_bottom = 211.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 13 )
text = "90"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 17 )
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts" ]


